# agentic-stack

./: docker-compose.yml  pyproject.toml
.ai/automation/generators/: daily_report.py
.ai/automation/health_checks/: dependency_audit.py  parity_check.py  secrets_check.py
.ai/automation/recovery_scripts/: rollback.py
.ai/plans/: CONTINGENCY.md  MASTER_PLAN.md  PARALLEL_TRACKS.md
.ai/rules/: DEPENDENCY_GOVERNANCE.yaml  ENVIRONMENT_PARITY.yaml  GOVERNANCE.yaml  IDLE_PROTOCOL.yaml  MODEL_SELECTION.yaml  OSS_GOVERNANCE.yaml  QUALITY_GATES.yaml  RECOVERY_PROTOCOL.yaml  SECRET_MANAGEMENT.yaml
.ai/specs/: API_CONTRACTS.yaml  ARCHITECTURE.yaml  DATA_MODELS.yaml  PRODUCT_SPEC.yaml
src/: __init__.py  main.py
src/agents/: __init__.py  architect.py  coder.py  infra.py  researcher.py  tester.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  agent_base.py  orchestrator.py
src/services/: __init__.py  rabbitmq_client.py  redis_client.py  vault_client.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_agent_base.py  test_agents.py  test_orchestrator.py  test_services.py
